# DigitClassifier

./: CMakeLists.txt  README.md
models/: model01.json
src/app/: DigitClassifier.cpp  DigitClassifier.h  DigitClassifier.qrc  DigitClassifier.ui  main.cpp
src/core/: Activation.cpp  Activation.h  DenseLayer.cpp  DenseLayer.h  Model.cpp  Model.h  ModelConfig.cpp  ModelConfig.h  ModelSerializer.cpp  ModelSerializer.h
src/data/: Dataset.cpp  Dataset.h  DatasetLoadWorker.cpp  DatasetLoadWorker.h  MNIST.h  MNISTLoader.cpp  MNISTLoader.h
src/dialog/: DatasetOpenDialog.cpp  DatasetOpenDialog.h  DatasetOpenDialog.ui
src/gallery/: SampleThumbnailModel.cpp  SampleThumbnailModel.h
src/image/: ImageConverter.cpp  ImageConverter.h
src/training/: LossFunction.cpp  LossFunction.h  Trainer.cpp  Trainer.h  TrainingConfig.cpp  TrainingConfig.h
src/widgets/: DatasetViewerPage.cpp  DatasetViewerPage.h  DatasetViewerPage.ui  PredictionBarChartWidget.cpp  PredictionBarChartWidget.h  SampleViewerWidget.cpp  SampleViewerWidget.h
